feat: :sparkles: Ajusta o projeto para realizar CRUD dos estudantes

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,11 +1,13 @@
-$primary: "primary" #00CCB5;
-$seconday: "secondary" #C7F2E7;
-$cyan: "cyan" #3F8B83;
-$red: "red" #F6A39A;
+$primary: "primary" #FEAF00;
+$seconday: "secondary" #F2EAE1;
+$red: "red" #FA7566;
 $white: "white" #FFFFFF;
 $grey: "grey" #A0A0A0;
+$black: "black" #3A3A3B;
+$green: "green" #36B37E;
 
-$colors: $primary $white $seconday $cyan $grey $red;
+
+$colors: $primary $white $seconday $grey $red $black $green;
 
 @each $c in $colors {
   .bg-#{nth($c, 1)} {
